[gd_scene load_steps=5 format=3 uid="uid://b1ycsca7qo073"]

[ext_resource type="Script" uid="uid://dbt271x4hchn5" path="res://characters/ui/CharacterSummaryUI.gd" id="1_hgpji"]
[ext_resource type="PackedScene" uid="uid://dwt2awegps8rb" path="res://items/ui/ItemIcon.tscn" id="2_43xls"]
[ext_resource type="PackedScene" uid="uid://ckvawd0d573sn" path="res://items/ui/ItemButtonDisplay.tscn" id="2_hgpji"]
[ext_resource type="PackedScene" uid="uid://cep2vfoh14qxb" path="res://core/StatsDisplay.tscn" id="3_j28tf"]

[node name="CharacterSummaryUI" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_hgpji")
item_display_scene = ExtResource("2_43xls")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Test"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="."]
layout_mode = 2
text = "Test"
horizontal_alignment = 1

[node name="LevelContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LevelTitle" type="Label" parent="LevelContainer"]
layout_mode = 2
text = "Level:"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="LevelContainer"]
layout_mode = 2
text = "Current Level"
horizontal_alignment = 1

[node name="PowerContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
alignment = 1

[node name="PowerTitle" type="Label" parent="PowerContainer"]
layout_mode = 2
text = "Power:"
horizontal_alignment = 1

[node name="PowerLabel" type="Label" parent="PowerContainer"]
layout_mode = 2
text = "Current Level"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsDisplay" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_j28tf")]
unique_name_in_owner = true
layout_mode = 2
show_empty = false
icon_size = 12

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="ItemDisplayContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="ItemButtonDisplay" parent="ScrollContainer/MarginContainer/VBoxContainer/CenterContainer/ItemDisplayContainer" instance=ExtResource("2_hgpji")]
layout_mode = 2

[node name="ItemButtonDisplay2" parent="ScrollContainer/MarginContainer/VBoxContainer/CenterContainer/ItemDisplayContainer" instance=ExtResource("2_hgpji")]
layout_mode = 2

[node name="ItemButtonDisplay3" parent="ScrollContainer/MarginContainer/VBoxContainer/CenterContainer/ItemDisplayContainer" instance=ExtResource("2_hgpji")]
layout_mode = 2
